--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <a href="index.html"><h1>MANAV7 INDIAN RETAURANT</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>Piople Certified</span>
             </p>
           </div>
 
@@ -80,7 +80,7 @@
           <span>Hours:</span><br>
           Sun-Thurs: 11:15am - 10:00pm<br>
           Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          Sunday Closed
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
